Added tools for twitter api requests and initial twitter api call for follower ids

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         <span class="host">Hosted on <a href="http://orchestra.io">Orchestra.io</a></span>
     </footer>
 
+    <script type="text/javascript" src="scripts/json_parse.js"></script>
     <script type="text/javascript" src="scripts/request.js"></script>
     <script type="text/javascript" src="scripts/twitter.js"></script>
     <script type="text/javascript" src="scripts/waldo.js"></script>
