Added twitter loading and the ability to have persistent state

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
     </noscript>
 
     <section id="identity">
-        <form method="get" action="">
-            <input type="text" id="screen_name" name="screen_name" value="" maxlength="15" />
+        <form id="identity_form" method="get" action="">
+            <input type="text" id="screen_name" name="name" value="" maxlength="15" />
         </form>
     </section>
 
